[gd_scene load_steps=4 format=3 uid="uid://bjxfp5r5xfw4f"]

[ext_resource type="Script" uid="uid://b2u6pnq3whpdm" path="res://scenes/player.gd" id="1_qhqgy"]
[ext_resource type="Texture2D" uid="uid://bj8bdbqjww8rg" path="res://placeholder/channel-cat-600.png" id="2_dqkch"]
[ext_resource type="PackedScene" uid="uid://c3t7ufag1d6k6" path="res://scenes/fishing_rod.tscn" id="3_qlg0r"]

[node name="Player" type="Node2D"]
script = ExtResource("1_qhqgy")

[node name="Sprite2D" type="Sprite2D" parent="."]
rotation = 1.5708
scale = Vector2(0.7, 0.7)
texture = ExtResource("2_dqkch")

[node name="Pivot" type="Marker2D" parent="."]
position = Vector2(-18, -163)
scale = Vector2(0.7, 0.7)

[node name="FishingRod" parent="Pivot" instance=ExtResource("3_qlg0r")]
position = Vector2(227.143, -7.14285)
rotation = -3.12526
scale = Vector2(1.42857, 1.42857)

[node name="Timers" type="Node" parent="."]

[node name="ExtensionTimer" type="Timer" parent="Timers"]
wait_time = 0.1

[connection signal="timeout" from="Timers/ExtensionTimer" to="." method="_on_extension_timer_timeout"]
